# ChangeLog for x11-apps/appres
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/appres/ChangeLog,v 1.35 2007/10/09 09:12:54 dberkholz Exp $

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -appres-1.0.0.ebuild:
  Drop old ebuilds.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> appres-1.0.1.ebuild:
  Stable on sparc wrt #175465

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> appres-1.0.1.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> appres-1.0.1.ebuild:
  alpha stable wrt #175465

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> appres-1.0.1.ebuild:
  Stable on mips, per #175465.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> appres-1.0.1.ebuild:
  Stable for HPPA (bug #175465).

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> appres-1.0.1.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> appres-1.0.1.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> appres-1.0.1.ebuild:
  Stable on ia64 wrt bug #175465.

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> appres-1.0.1.ebuild:
  Stable on ppc64; bug #175465

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  appres-1.0.1.ebuild:
  Remove an unnecessary mirror restriction.

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  appres-1.0.0.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

*appres-1.0.1 (25 Jan 2007)

  25 Jan 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  +appres-1.0.1.ebuild:
  Version bump for X7.2.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; appres-1.0.0.ebuild:
  Update description to be less generic.

  06 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> appres-1.0.0.ebuild:
  Add ~x86-fbsd keyword.

  17 Aug 2006; Aron Griffis <agriffis@gentoo.org> appres-1.0.0.ebuild:
  Mark 1.0.0 stable on ia64
