@@ -1,4 +1,4 @@
 DIST appres-1.0.1.tar.bz2 85320 RMD160 e9672cf8c500e3dd345d193ec0a40a9d19795783 SHA1 e50126abc99c64e4827a6b4c27dd2cd473bd958f SHA256 15fef83a202b8dcee3420c88dba4aeed1f8fc840ab537487fb5411b99a2eb962
-EBUILD appres-1.0.1.ebuild 517 RMD160 02c8aace136ef83fcc2d93c122c4f4bf30c1ff1b SHA1 777af788e17c0cdc8c423fa2614ccae8da0c2e4f SHA256 2307f04375c8926c098725c6eaa5ed0632e97f9e9551cb363afbdb187981e6e1
-MISC ChangeLog 4169 RMD160 f1e49d0caffdf7f14829b07900c9f0ae562edc28 SHA1 40088fe48c6a8b26a3b9a0b57240e106d5df7f25 SHA256 44f394c97c6595358a27c6c4310e12463de819314d1be86deee58b4f65fbdf24
+EBUILD appres-1.0.1.ebuild 521 RMD160 e835ff7fd44b33a4f7e54735608323eb992fe71b SHA1 23dda798415b2aee6a033dc8cd605d04a2fdb891 SHA256 4423e9b5e809cf339a16678e5adf1343b0745a1526dbcd91aaa6060f2bc01d6f
+MISC ChangeLog 4284 RMD160 5e9d473dbdb8812a7d8782da36a35982ce8343c4 SHA1 e1a2989669781cf9649072767e10ba7c5a52f199 SHA256 6e37ae5b629d113e5ef66d598f66f70bf84afe32de9a985dfd716154834e1bdf
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
